new img and notebook upgrade

--- a/notebooks/cycle05-final-notebook.ipynb
+++ b/notebooks/cycle05-final-notebook.ipynb
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e018ec4b",
+   "id": "ffbd5b36",
    "metadata": {},
    "source": [
     "#### 4.1.1. Report Filtering"
@@ -1446,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "59e05c3a",
+   "id": "9895f2f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-06T18:14:24.944891Z",
@@ -2497,7 +2497,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "ac2c2086",
+   "id": "9ccce6e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-06T18:38:59.080426Z",
@@ -2706,7 +2706,9 @@
   {
    "cell_type": "markdown",
    "id": "a670c44b",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 10.2. Business Hypothesis"
    ]
@@ -2714,7 +2716,9 @@
   {
    "cell_type": "markdown",
    "id": "84d69478",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**H1**: The Private cluster customers represent 20% of purchase volume per item.\n",
     "\n",
@@ -2730,7 +2734,9 @@
   {
    "cell_type": "markdown",
    "id": "8f9d74ab",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### H1: The Private cluster customers represent 20% of purchase volume per item.\n",
     "**FALSE**. They represent only 10% of purchase volume per item."
@@ -2744,7 +2750,8 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:11:08.404627Z",
      "start_time": "2022-04-06T19:11:08.383649Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2765,7 +2772,9 @@
   {
    "cell_type": "markdown",
    "id": "71251e09",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### H2: The Private cluster customers represent 10% of total revenue.\n",
     "**TRUE**. They represent 20% of the total revenue."
@@ -2779,7 +2788,8 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:11:09.503859Z",
      "start_time": "2022-04-06T19:11:09.482628Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2800,7 +2810,9 @@
   {
    "cell_type": "markdown",
    "id": "719c8caa",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "###  H3: The Private cluster customers have a median number of returns below the median of the total database.\n",
     "**FALSE**. They return 1359.35% times more."
@@ -2814,7 +2826,8 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:11:12.320044Z",
      "start_time": "2022-04-06T19:11:12.298932Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2835,7 +2848,9 @@
   {
    "cell_type": "markdown",
    "id": "0bbd8bc6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### H4: The Private Cluster customers max recency it's less than the total database mean.\n",
     "**TRUE**. The Private Cluster max recency it's 38% smaller than the total database mean."
@@ -2849,7 +2864,8 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:14:23.849071Z",
      "start_time": "2022-04-06T19:14:23.828712Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2874,7 +2890,9 @@
   {
    "cell_type": "markdown",
    "id": "ab7c9adb",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### H5: The Private Cluster customers represents 15% of the total transactions.\n",
     "**FALSE**. They only represent 7.12 of the total transactions."
@@ -2888,7 +2906,8 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:17:35.505246Z",
      "start_time": "2022-04-06T19:17:35.484984Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2907,7 +2926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a264c1",
+   "id": "404a56da",
    "metadata": {},
    "source": [
     "## 10.3. Business Report"
@@ -2915,7 +2934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64185b34",
+   "id": "01119cf1",
    "metadata": {},
    "source": [
     "### How many customers the group will have?"
@@ -2923,7 +2942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d062dc16",
+   "id": "1760b9c5",
    "metadata": {},
    "source": [
     "**15.**"
@@ -2931,7 +2950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b5cf5f3",
+   "id": "bcc8ebee",
    "metadata": {},
    "source": [
     "### What's the main characteristics of those customers?"
@@ -2939,7 +2958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bab3b2ff",
+   "id": "7fb435c1",
    "metadata": {},
    "source": [
     "- Percentage in relation with database: **0.51%**\n",
@@ -2953,7 +2972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3415276",
+   "id": "90d97b61",
    "metadata": {},
    "source": [
     "### What's the percentage of contribution in revenue from the Private customers?"
@@ -2961,7 +2980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c500bd60",
+   "id": "8389b2a6",
    "metadata": {},
    "source": [
     "**20%**"
@@ -2969,7 +2988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef06c58d",
+   "id": "ab89570d",
    "metadata": {},
    "source": [
     "### What's the conditions for a person be elegible for the Privates?"
@@ -2978,7 +2997,7 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "80e168b3",
+   "id": "554a3643",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T09:08:24.814733Z",
@@ -3024,7 +3043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8501a4e",
+   "id": "1db475a5",
    "metadata": {},
    "source": [
     "The conditions are be in this streak for two consecutive months:\n",
@@ -3036,7 +3055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "979d1a18",
+   "id": "4267ceb0",
    "metadata": {},
    "source": [
     "### What's the conditions for a person be removed from the Privates?"
@@ -3044,7 +3063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d74357b8",
+   "id": "1a4cccee",
    "metadata": {},
    "source": [
     "**Be outside the eligible streak or break the streak for three consecutive months**"
@@ -3052,7 +3071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb82556",
+   "id": "f9b9d4f7",
    "metadata": {},
    "source": [
     "### What actions the Marketing Team can realize to increase the revenue? "
@@ -3060,7 +3079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d573821",
+   "id": "e74fff80",
    "metadata": {},
    "source": [
     "They can give cumulative benefits for the three best groups. So the most important group ( Private ) will have access to all benefits of the two below plus more exclusive ones.\n",
