final notebook upgrade

--- a/notebooks/cycle05-final-notebook.ipynb
+++ b/notebooks/cycle05-final-notebook.ipynb
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffbd5b36",
+   "id": "6c80ba8d",
    "metadata": {},
    "source": [
     "#### 4.1.1. Report Filtering"
@@ -1446,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "9895f2f4",
+   "id": "ea0b68b2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-06T18:14:24.944891Z",
@@ -2497,7 +2497,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "9ccce6e2",
+   "id": "4b43f69a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-06T18:38:59.080426Z",
@@ -2706,9 +2706,7 @@
   {
    "cell_type": "markdown",
    "id": "a670c44b",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 10.2. Business Hypothesis"
    ]
@@ -2716,9 +2714,7 @@
   {
    "cell_type": "markdown",
    "id": "84d69478",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**H1**: The Private cluster customers represent 20% of purchase volume per item.\n",
     "\n",
@@ -2734,9 +2730,7 @@
   {
    "cell_type": "markdown",
    "id": "8f9d74ab",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### H1: The Private cluster customers represent 20% of purchase volume per item.\n",
     "**FALSE**. They represent only 10% of purchase volume per item."
@@ -2750,8 +2744,7 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:11:08.404627Z",
      "start_time": "2022-04-06T19:11:08.383649Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -2772,9 +2765,7 @@
   {
    "cell_type": "markdown",
    "id": "71251e09",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### H2: The Private cluster customers represent 10% of total revenue.\n",
     "**TRUE**. They represent 20% of the total revenue."
@@ -2788,8 +2779,7 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:11:09.503859Z",
      "start_time": "2022-04-06T19:11:09.482628Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -2810,9 +2800,7 @@
   {
    "cell_type": "markdown",
    "id": "719c8caa",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "###  H3: The Private cluster customers have a median number of returns below the median of the total database.\n",
     "**FALSE**. They return 1359.35% times more."
@@ -2826,8 +2814,7 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:11:12.320044Z",
      "start_time": "2022-04-06T19:11:12.298932Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -2848,9 +2835,7 @@
   {
    "cell_type": "markdown",
    "id": "0bbd8bc6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### H4: The Private Cluster customers max recency it's less than the total database mean.\n",
     "**TRUE**. The Private Cluster max recency it's 38% smaller than the total database mean."
@@ -2864,8 +2849,7 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:14:23.849071Z",
      "start_time": "2022-04-06T19:14:23.828712Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -2890,9 +2874,7 @@
   {
    "cell_type": "markdown",
    "id": "ab7c9adb",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### H5: The Private Cluster customers represents 15% of the total transactions.\n",
     "**FALSE**. They only represent 7.12 of the total transactions."
@@ -2906,8 +2888,7 @@
     "ExecuteTime": {
      "end_time": "2022-04-06T19:17:35.505246Z",
      "start_time": "2022-04-06T19:17:35.484984Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -2926,7 +2907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "404a56da",
+   "id": "7e4e5903",
    "metadata": {},
    "source": [
     "## 10.3. Business Report"
@@ -2934,7 +2915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01119cf1",
+   "id": "2d4d47f8",
    "metadata": {},
    "source": [
     "### How many customers the group will have?"
@@ -2942,7 +2923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1760b9c5",
+   "id": "4fff0686",
    "metadata": {},
    "source": [
     "**15.**"
@@ -2950,7 +2931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc8ebee",
+   "id": "f8c6814a",
    "metadata": {},
    "source": [
     "### What's the main characteristics of those customers?"
@@ -2958,7 +2939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb435c1",
+   "id": "84e4ff26",
    "metadata": {},
    "source": [
     "- Percentage in relation with database: **0.51%**\n",
@@ -2972,7 +2953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90d97b61",
+   "id": "16001796",
    "metadata": {},
    "source": [
     "### What's the percentage of contribution in revenue from the Private customers?"
@@ -2980,7 +2961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8389b2a6",
+   "id": "a3d92bf2",
    "metadata": {},
    "source": [
     "**20%**"
@@ -2988,16 +2969,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab89570d",
+   "id": "c48b97ab",
    "metadata": {},
    "source": [
-    "### What's the conditions for a person be elegible for the Privates?"
+    "### What's the conditions for a customer be elegible for the Privates?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 309,
-   "id": "554a3643",
+   "id": "a33739df",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-07T09:08:24.814733Z",
@@ -3043,7 +3024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db475a5",
+   "id": "d020702c",
    "metadata": {},
    "source": [
     "The conditions are be in this streak for two consecutive months:\n",
@@ -3055,15 +3036,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4267ceb0",
+   "id": "3d1467b9",
    "metadata": {},
    "source": [
-    "### What's the conditions for a person be removed from the Privates?"
+    "### What's the conditions for a customer be removed from the Privates?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a4cccee",
+   "id": "20102144",
    "metadata": {},
    "source": [
     "**Be outside the eligible streak or break the streak for three consecutive months**"
@@ -3071,7 +3052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9b9d4f7",
+   "id": "0c422886",
    "metadata": {},
    "source": [
     "### What actions the Marketing Team can realize to increase the revenue? "
@@ -3079,7 +3060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e74fff80",
+   "id": "8dbc814c",
    "metadata": {},
    "source": [
     "They can give cumulative benefits for the three best groups. So the most important group ( Private ) will have access to all benefits of the two below plus more exclusive ones.\n",
